F1-6: user update implemented + delivery-layer updated
