# docs/swagger.json
@@ -179,6 +179,44 @@
                 }
             }
         },
+        "/api/albums/{albumID}/like": {
+            "post": {
+                "description": "Set like by user to chosen album (add to favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Album"
+                ],
+                "summary": "Set like",
+                "responses": {
+                    "200": {
+                        "description": "Like set",
+                        "schema": {
+                            "$ref": "#/definitions/http.albumLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/albums/{albumID}/tracks": {
             "get": {
                 "description": "All tracks of album with chosen ID",
@@ -201,6 +239,44 @@
                     },
                     "400": {
                         "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/albums/{albumID}/unlike": {
+            "post": {
+                "description": "Remove like by user from chosen album (remove from favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Album"
+                ],
+                "summary": "Remove like",
+                "responses": {
+                    "200": {
+                        "description": "Like removed",
+                        "schema": {
+                            "$ref": "#/definitions/http.albumLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -404,6 +480,44 @@
                 }
             }
         },
+        "/api/artists/{artistID}/like": {
+            "post": {
+                "description": "Set like by user to chosen artist (add to favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Artist"
+                ],
+                "summary": "Set like",
+                "responses": {
+                    "200": {
+                        "description": "Like set",
+                        "schema": {
+                            "$ref": "#/definitions/http.artistLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/api/artists/{artistID}/tracks": {
             "get": {
                 "description": "All tracks of artist with chosen ID",
@@ -426,6 +540,44 @@
                     },
                     "400": {
                         "description": "Incorrect body",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/artists/{artistID}/unlike": {
+            "post": {
+                "description": "Remove like by user from chosen artist (remove from favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Artist"
+                ],
+                "summary": "Remove like",
+                "responses": {
+                    "200": {
+                        "description": "Like removed",
+                        "schema": {
+                            "$ref": "#/definitions/http.artistLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -535,7 +687,7 @@
                 "summary": "Sign Up",
                 "parameters": [
                     {
-                        "description": "user info",
+                        "description": "User info",
                         "name": "user",
                         "in": "body",
                         "required": true,
@@ -644,12 +796,6 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Incorrect input",
-                        "schema": {
-                            "$ref": "#/definitions/http.Error"
-                        }
-                    },
                     "500": {
                         "description": "Server error",
                         "schema": {
@@ -726,6 +872,82 @@
                     },
                     "403": {
                         "description": "User hasn't rights",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/tracks/{trackID}/like": {
+            "post": {
+                "description": "Set like by user to chosen track (add to favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Track"
+                ],
+                "summary": "Set like",
+                "responses": {
+                    "200": {
+                        "description": "Like set",
+                        "schema": {
+                            "$ref": "#/definitions/http.trackLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/tracks/{trackID}/unlike": {
+            "post": {
+                "description": "Remove like by user from chosen track (remove from favorite)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Track"
+                ],
+                "summary": "Remove like",
+                "responses": {
+                    "200": {
+                        "description": "Like removed",
+                        "schema": {
+                            "$ref": "#/definitions/http.trackLikeResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Client error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -979,6 +1201,64 @@
                     }
                 }
             }
+        },
+        "/api/users/{userID}/update": {
+            "post": {
+                "description": "Update info about user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update Info",
+                "parameters": [
+                    {
+                        "description": "User info",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.userInfoInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User info updated",
+                        "schema": {
+                            "$ref": "#/definitions/http.userUploadAvatarResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User Unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1026,6 +1306,14 @@
                 }
             }
         },
+        "http.albumLikeResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "http.artistCreateInput": {
             "type": "object",
             "properties": {
@@ -1046,6 +1334,14 @@
             }
         },
         "http.artistDeleteResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.artistLikeResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -1127,6 +1423,34 @@
             "properties": {
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "http.trackLikeResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.userInfoInput": {
+            "type": "object",
+            "properties": {
+                "birthDate": {
+                    "$ref": "#/definitions/models.Date"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "sex": {
+                    "$ref": "#/definitions/models.Sex"
                 }
             }
         },
