# internal/pkg/artist/delivery/http/artist_delivery.go
@@ -42,8 +42,7 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	}
 
 	var aci artistCreateInput
-	decoder := json.NewDecoder(r.Body)
-	if err := decoder.Decode(&aci); err != nil {
+	if err := json.NewDecoder(r.Body).Decode(&aci); err != nil {
 		commonHttp.ErrorResponseWithErrLogging(w, "incorrect input body", http.StatusBadRequest, h.logger, err)
 		return
 	}
@@ -171,7 +170,15 @@ func (h *Handler) Feed(w http.ResponseWriter, r *http.Request) {
 	commonHttp.SuccessResponse(w, artistsTransfer, h.logger)
 }
 
-// swaggermock
+// @Summary		Set like
+// @Tags		Artist
+// @Description	Set like by user to chosen artist (add to favorite)
+// @Produce		json
+// @Success		200		{object}	artistLikeResponse	"Like set"
+// @Failure		400		{object}	http.Error			"Client error"
+// @Failure		401		{object}	http.Error  		"User unathorized"
+// @Failure		500		{object}	http.Error			"Server error"
+// @Router		/api/artists/{artistID}/like [post]
 func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 	artistID, err := commonHttp.GetArtistIDFromRequest(r)
 	if err != nil {
@@ -205,7 +212,15 @@ func (h *Handler) Like(w http.ResponseWriter, r *http.Request) {
 	commonHttp.SuccessResponse(w, alr, h.logger)
 }
 
-// swaggermock
+// @Summary		Remove like
+// @Tags		Artist
+// @Description	Remove like by user from chosen artist (remove from favorite)
+// @Produce		json
+// @Success		200		{object}	artistLikeResponse	"Like removed"
+// @Failure		400		{object}	http.Error			"Client error"
+// @Failure		401		{object}	http.Error  		"User unathorized"
+// @Failure		500		{object}	http.Error			"Server error"
+// @Router		/api/artists/{artistID}/unlike [post]
 func (h *Handler) UnLike(w http.ResponseWriter, r *http.Request) {
 	user, err := commonHttp.GetUserFromRequest(r)
 	if err != nil {
